Need to work on Profile screen more
